working api and database connection

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,6 @@ spring:
       host: localhost
       port: 27017
       database: requests
+      auto-index-creation: true
+user-settings:
+  drop-on-restart: false
